# llamafarm

./: .cursorrules  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .release-please-manifest.json  .ruff-standard.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  install.sh  llama-cpp-version.txt  nx.json  package-lock.json  project.json  release-please-config.json  ruff.toml  test_addons.sh  test_model_switching.sh
common/: README.md  pyproject.toml
common/llamafarm_common/: __init__.py  model_utils.py  pidfile.py
common/tests/: test_model_utils.py
runtimes/universal/: Dockerfile  README.md  download_model.py  project.json  pyproject.toml  pytest.ini  server.py  state.py
runtimes/universal/api_types/: __init__.py  adtk.py  anomaly.py  audio.py  catboost.py  classifier.py  common.py  drift.py  explain.py  nlp.py  timeseries.py  vision.py
runtimes/universal/core/: __init__.py
runtimes/universal/models/: __init__.py  adtk_model.py  anomaly_model.py  base.py  catboost_model.py  classifier_model.py  clip_model.py  document_model.py  drift_model.py  emotion_model.py  encoder_model.py  encoder_model_onnx_example.py  gguf_encoder_model.py  gguf_language_model.py  language_model.py  shap_explainer.py  speech_model.py  timeseries_model.py  tts_model.py  vision_base.py  yolo_model.py
runtimes/universal/routers/: __init__.py
runtimes/universal/routers/adtk/: __init__.py  router.py
runtimes/universal/routers/anomaly/: __init__.py  router.py  service.py  types.py
runtimes/universal/routers/audio/: __init__.py  router.py
runtimes/universal/routers/audio_chat/: __init__.py  router.py  service.py  types.py
runtimes/universal/routers/audio_speech/: __init__.py  router.py  service.py  types.py
runtimes/universal/routers/catboost/: __init__.py  router.py
runtimes/universal/routers/chat_completions/: router.py  (+2 more)
runtimes/universal/scripts/: download_llama_binary.py
runtimes/universal/services/: __init__.py  cache_key_builder.py  error_handler.py  model_loader.py  path_validator.py  training_executor.py
runtimes/universal/storage/: image_store.py
runtimes/universal/tests/: README.md  __init__.py  conftest.py  test_adtk.py  test_anomaly_router.py  test_audio_router.py  test_cache_keys.py  test_catboost.py  test_classifier_router.py  test_coco_converter.py  test_context_calculator.py  test_context_manager.py  test_context_summarizer.py  test_detect_classify.py  test_drift.py  test_encoder_model.py  test_files_router.py  test_gguf_encoder_model.py  test_gguf_metadata_cache.py  test_gguf_model.py  test_gpu_allocator.py  test_health_router.py  test_jinja_tools.py  test_language_model.py  test_model_format.py  test_model_services.py  test_model_unloading.py  test_nlp_router.py  test_shap.py  test_shared_services.py  test_speech_model.py  test_streaming_server.py  test_streaming_tool_calls.py  test_streaming_vision.py  test_timeseries.py  test_tool_calling.py  test_tool_calling_e2e.py  test_vision_router.py
runtimes/universal/utils/: __init__.py  audio_buffer.py  audio_encoder.py  context_calculator.py  context_manager.py  context_summarizer.py  device.py  file_utils.py  ggml_logging.py  gguf_metadata_cache.py  gpu_allocator.py  history_compressor.py  jinja_tools.py  model_format.py  safe_home.py  thinking.py  token_counter.py  tool_calling.py
runtimes/universal/vision_training/: __init__.py  coco_converter.py  replay_buffer.py  trainer.py
runtimes/universal/voices/: .gitignore  README.md  download_voices.py
server/: .gitignore  Dockerfile  README.md  main.py  project.json  pyproject.toml  restart_runtime.sh
server/agents/: agent.py  chat_orchestrator.py  project_chat_orchestrator.py
server/agents/base/: agent.py  history.py  system_prompt_generator.py  types.py
server/api/: errors.py  main.py
server/api/middleware/: structlog.py
server/api/routers/: __init__.py  examples.py  health.py
server/context_providers/: docs_context_provider.py  project_context_provider.py  rag_context_provider.py
server/core/: designer.py  image_utils.py  logging.py  settings.py  version.py
server/core/celery/: celery.py  rag_client.py
server/scripts/: benchmark_instructor_api.py
server/seeds/project_seed/: llamafarm.yaml
server/services/: data_service.py  database_service.py  dataset_cleanup_service.py  dataset_service.py  disk_space_service.py  docs_context_service.py  event_log_service.py  health_service.py  mcp_service.py  ml_model_service.py  model_service.py  project_chat_service.py  project_service.py  prompt_service.py  rag_health_cache.py  rag_service.py  rag_subprocess.py  template_service.py  universal_runtime_service.py  upgrade_service.py
server/services/runtime_service/: __init__.py  runtime_service.py
server/services/vision/: __init__.py  classification_service.py  detection_service.py  pipeline_service.py  review_service.py
server/tests/: conftest.py  test_celery_windows_url.py  test_chat_api_baseline.py  test_chat_orchestrator_agent.py  test_chat_request_variables.py  test_cli_upgrade_endpoint.py  test_data_service.py  test_database_service.py  test_dataset_metadata_error_handling.py  test_dataset_service.py  test_dataset_service_extra_details.py  test_datasets_api_extra_details.py  test_datasets_async_sleep.py  test_docs_context_service.py  test_dynamic_values_edge_cases.py  test_dynamic_values_integration.py  test_llamagent_client_openai.py  test_llamagent_framework.py  test_mcp_service.py  test_mcp_tool_factory.py  test_models_endpoint.py  test_project_chat_orchestrator.py  test_project_chat_service.py  test_project_service.py  test_projects_api.py  test_prompt_template_resolution.py  test_rag_health_endpoint.py  test_rag_router_components.py  test_rag_stats_endpoint.py  test_tasks_and_datasets_api.py  test_template_engine.py  test_tool_template_resolution.py  test_universal_runtime_proxy.py  test_voice_e2e.py  test_voice_interrupts.py  test_voice_negative.py  voice_test_plan.md
server/tests/fixtures/: test_components_config.yaml
server/tools/core/: prompt_engineering_system.py
(+983 files in other folders)
