[project]
name = "llamafarm-common"
version = "0.1.0"
description = "Common utilities shared across LlamaFarm Python services"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamafarm_common"]

[tool.uv]
dev-dependencies = []
