[project]
name = "llamafarm-common"
version = "0.1.0"
description = "Common utilities shared across LlamaFarm Python services"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.24.0",
    "hf-transfer>=0.1.9",  # High-speed downloads (set HF_HUB_ENABLE_HF_TRANSFER=1)
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamafarm_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
