[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "agents", "services", "background"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # External dependencies
  "dotenv>=0.9.9",
  "fastapi>=0.116.1",
  "pre-commit>=4.2.0",
  "pydantic-settings>=2.10.1",
  "ruff>=0.12.7",
  "uvicorn>=0.35.0",
  "openai>=1.0.0",
  "instructor>=1.0.0",
  "urllib3==1.26.20",
  "six>=1.16.0",
  "requests>=2.25.0",
  "httpx>=0.25.0",
  "mcp>=1.2.0",
  "structlog>=25.4.0",
  "asgi-correlation-id>=4.3.4",
  "atomic-agents==2.1.0",
  "jsonref>=1.1.0", # Can be removed since it's now in config
  "celery>=5.5.3",
  # Configuration parsing
  "pyyaml>=6.0.0", # Can be removed since it's now in config
  # Fix dotenv parsing
  "python-dotenv>=1.0.0",
  "llamafarm-config",
  "types-requests>=2.31.0.6",
  "fastapi-mcp>=0.4.0",
  "mcp>=1.2.0",
  "ollama>=0.6.0",
  "huggingface-hub>=1.0.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[dependency-groups]
test = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0", "pytest-mock>=3.14.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88         # Match Black's default
target-version = "py311"

# Enable auto-fixes
fix = true

# Select rulesets (examples: E for pycodestyle, F for pyflakes, I for isort, B for bugbear)
lint.select = ["E", "F", "I", "B", "UP", "SIM"]

# Exclude some files
exclude = ["migrations", ".venv", "venv", "build", "dist"]

[tool.uv.sources]
llamafarm-config = { path = "../config", editable = true }

# Optional: treat warnings as errors
# force-exclude = true
