[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "agents", "services"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # External dependencies
  "dotenv>=0.9.9",
  "fastapi>=0.116.1",
  "pre-commit>=4.2.0",
  "pydantic-settings>=2.10.1",
  "ruff>=0.14.3",
  "uvicorn>=0.35.0",
  "openai>=1.0.0",
  "instructor>=1.0.0",
  "urllib3>=2.0.0",
  "six>=1.16.0",
  "requests>=2.32.5,<3.0.0",
  "httpx>=0.25.0",
  "mcp>=1.2.0",
  "structlog>=25.4.0",
  "asgi-correlation-id>=4.3.4",
  "atomic-agents==2.1.0",
  "jsonref>=1.1.0",             # Can be removed since it's now in config
  "celery>=5.5.3",
  # Configuration parsing
  "pyyaml>=6.0.0", # Can be removed since it's now in config
  # Fix dotenv parsing
  "python-dotenv>=1.0.0",
  "llamafarm-config",
  "llamafarm-common",
  "types-requests>=2.31.0.6",
  "fastapi-mcp>=0.4.0",
  "ollama>=0.6.0",
  "huggingface-hub>=1.0.1",
  "psutil>=5.9.0",
  "pymupdf>=1.26.0",  # PDF to image conversion
  # Windows-specific dependencies
  "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]
test = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]
test = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0", "pytest-mock>=3.14.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Ruff configuration is shared across all Python components
# See ../ruff.toml for the actual configuration

[tool.ruff]
# Import shared configuration
extend = "../ruff.toml"

[tool.uv.sources]
llamafarm-config = { path = "../config", editable = true }
llamafarm-common = { path = "../common", editable = true }

# Optional: treat warnings as errors
# force-exclude = true
